<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_page_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/loginpage_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/back_to_welcome"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/backblue"
                android:contentDescription="@string/back_arrow"
                android:layout_gravity="start"/>

            <ImageView
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="@color/imageBackground"
                android:contentDescription="@string/app_name"
                android:src="@drawable/journal" />


            <AutoCompleteTextView
                android:id="@+id/login_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/login_account_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/login_text"
                    android:textAlignment="center" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/login_progressbar"
                android:visibility="gone"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>