<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="25dp"
            android:id="@+id/welcome_inner_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="60dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/journal_logo"
                    android:layout_width="150dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:background="@color/imageBackground"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/journal" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/welcome_login_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/login_text"
                    android:textAlignment="center" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/welcome_create_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/create_text"
                    android:textAlignment="center" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>